# moondeck-buddy

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  test.py  test_envsharedmemory.cpp
docs/: ENVIRONMENT_VARIABLES.md
src/: CMakeLists.txt  main.cpp
src/buddy/: CMakeLists.txt  main.cpp  pccontrol.cpp  pccontrol.h  routing.cpp  routing.h  streamstatehandler.cpp  streamstatehandler.h  sunshineapps.cpp  sunshineapps.h  systemtray.cpp  systemtray.h
src/lib/: CMakeLists.txt
src/lib/common/: CMakeLists.txt  appmetadata.cpp  loggingcategories.cpp  usersettings.cpp
src/lib/common/include/common/: appmetadata.h  appsettings.h  loggingcategories.h  usersettings.h
src/lib/json/: CMakeLists.txt  json.cpp
src/lib/json/include/json/: glaze_enum.h  glaze_qregularexpression.h  glaze_qstring.h  json.h
src/lib/msgs/: CMakeLists.txt
src/lib/msgs/in/: abortpairing.h  changeresolution.cpp  changeresolution.h  closesteam.h  hello.h  launchapp.cpp  login.h  pair.cpp  pairstatus.cpp  restartpc.cpp  shutdownpc.cpp  shutdownpc.h  steamstatus.cpp  steamstatus.h
src/lib/os/: CMakeLists.txt  autostarthandler.cpp  commandproxy.h  nativepcstatehandlerinterface.h  nativeprocesshandlerinterface.h  networkinfo.cpp  pccontrol.cpp  pccontrol.h  pccontrolinterface.h  pcstatehandler.cpp  pcstatehandler.h  pcstatehandlerinterface.h  processhandler.cpp  processhandler.h  resolutionhandler.cpp  resolutionhandler.h  resolutionhandlerinterface.h  sleepinhibitor.cpp  steamcontentlogtracker.cpp  steamhandler.cpp  steamhandler.h  steamhandlerinterface.h  steamlogtracker.cpp  steamproxy.cpp  steamproxy.h  steamregistryobserverinterface.h  streamstatehandler.cpp  streamstatehandlerinterface.h  sunshineapps.cpp  sunshineapps.h  systemtray.cpp
src/lib/os/common/: CMakeLists.txt
src/lib/os/include/os/: autostarthandler.h  networkinfo.h  pccontrol.h  pcstatehandler.h  processhandler.h  resolutionhandler.h  sleepinhibitor.h  steamhandler.h  steamlogtracker.h  streamstatehandler.h  streamstatehandlerinterface.h  sunshineapps.h  systemtray.h
src/lib/os/linux/: CMakeLists.txt  autostarthandler.cpp  autostarthandler.h  cursorhandler.cpp  nativeautostarthandler.cpp  nativepcstatehandler.cpp  nativepcstatehandler.h  nativeprocesshandler.cpp  nativeprocesshandler.h  nativeresolutionhandler.cpp  nativesleepinhibitor.cpp  pcstatehandler.cpp  pcstatehandler.h  registryfileparser.cpp  registryfileparser.h  registryfilewatcher.cpp  registryfilewatcher.h  resolutionhandler.cpp  resolutionhandler.h  steamhandler.cpp  steamhandler.h  steamprocesslistobserver.cpp  steamprocesslistobserver.h  steamregistryobserver.cpp  steamregistryobserver.h  waylandresolutionhandler.cpp  waylandresolutionhandler.h  x11resolutionhandler.cpp  x11resolutionhandler.h
src/lib/os/shared/: CMakeLists.txt  streamstatehandler.cpp  streamstatehandler.h
src/lib/os/steam/: CMakeLists.txt  shortcutsvdf.cpp  steamapplauncher.cpp  steamappwatcher.cpp  steamcommandproxy.cpp  steamconnectionlogtracker.cpp  steamcontentlogtracker.cpp  steamgameprocesslogtracker.cpp  steamlauncher.cpp  steamlogtracker.cpp  steamprocesstracker.cpp  steamshaderlogtracker.cpp  steamwebhelperlogtracker.cpp
src/lib/os/win/: CMakeLists.txt  autostarthandler.cpp  autostarthandler.h  cursorhandler.cpp  cursorhandler.h  messagequeue.cpp  messagequeue.h  nativeautostarthandler.cpp  nativenetworkhandler.cpp  nativepcstatehandler.cpp  nativepcstatehandler.h  nativeprocesshandler.cpp  nativeprocesshandler.h  nativeresolutionhandler.cpp  nativeresolutionhandler.h  nativesleepinhibitor.cpp  pccontrolimpl.cpp  pccontrolimpl.h  pcstatehandler.cpp  pcstatehandler.h  processenumerator.cpp  processenumerator.h  processtracker.cpp  processtracker.h  regkey.cpp  regkey.h  resolutionhandler.cpp  resolutionhandler.h  steamhandler.cpp  steamhandler.h  steamregistryobserver.cpp  steamregistryobserver.h  streamstatehandler.cpp  streamstatehandler.h
src/lib/server/: CMakeLists.txt  clientids.cpp  clientids.h  cobs.cpp  cobsjsonprotocol.cpp  cobsjsonprotocol.h  httpserver.cpp  httpserver.h  jsonserver.cpp  jsonserver.h  pairingmanager.cpp  pairingmanager.h
src/lib/server/include/server/: clientids.h  httpserver.h  pairingmanager.h
src/lib/shared/: CMakeLists.txt  appid.cpp  appmetadata.cpp  appmetadata.h  constants.h  enums.h  loggingcategories.cpp  loggingcategories.h  steamid.cpp
src/lib/shared/include/shared/: appid.h  appmetadata.h  enums.h  loggingcategories.h  steamid.h
src/lib/steam/: CMakeLists.txt  appid.cpp  shortcutsvdf.cpp  steamappwatcher.cpp  steamcommandproxy.cpp  steamconnectionlogtracker.cpp  steamcontentlogtracker.cpp  steamgameprocesslogtracker.cpp  steamhandler.cpp  steamid.cpp  steamlogtracker.cpp  steamlogtrackers.cpp  steamprocesstracker.cpp  steamshaderlogtracker.cpp  steamwebhelperlogtracker.cpp
src/lib/utils/: CMakeLists.txt  appsettings.cpp  appsettings.h  envsharedmemory.cpp  heartbeat.cpp  heartbeat.h  helpers.cpp  helpers.h  logsettings.cpp  logsettings.h  pairinginput.cpp  shmserialization.cpp  singleinstanceguard.cpp  systemtray.cpp  systemtray.h  unixsignalhandler.cpp
src/msgs/: CMakeLists.txt  converter.h
src/msgs/in/: abortpairing.cpp  closesteam.cpp  hello.cpp  launchapp.cpp  launchapp.h  login.cpp  pair.h  pairstatus.h  pcstate.cpp  pcstate.h  restartpc.h
src/os/: CMakeLists.txt  commandproxy.cpp  commandproxy.h  pccontrol.cpp  pccontrol.h  pccontrolinterface.h  steamproxy.cpp  steamproxy.h
src/os/win/: CMakeLists.txt  pccontrolimpl.cpp  pccontrolimpl.h  processtracker.cpp  processtracker.h  regkey.cpp  regkey.h
src/server/: clientids.cpp  clientids.h  cobs.cpp  cobs.h  cobsjsonprotocol.h  jsonserver.cpp  jsonserver.h  jsonsocket.cpp  jsonsocket.h
src/shared/: CMakeLists.txt  pcstate.h
src/stream/: CMakeLists.txt  avfromtojson.h  glaze_common.h  glaze_qenum.h  glaze_qlistlike.h  glaze_qmaplike.h  glaze_qstring.h  main.cpp
src/utils/: CMakeLists.txt  appsettings.cpp  appsettings.h  pairinginput.cpp  singleinstanceguard.cpp  singleinstanceguard.h  systemtray.cpp  systemtray.h
(+84 files in other folders)
