#----------------------------------------------------------------------------------------------------------------------
# Subdirectories
#----------------------------------------------------------------------------------------------------------------------

add_subdirectory(buddy)
add_subdirectory(lib)
add_subdirectory(stream)
