#----------------------------------------------------------------------------------------------------------------------
# Subdirectories
#----------------------------------------------------------------------------------------------------------------------

add_subdirectory(shared)
add_subdirectory(server)
add_subdirectory(utils)
add_subdirectory(os)
