#----------------------------------------------------------------------------------------------------------------------
# Subdirectories
#----------------------------------------------------------------------------------------------------------------------

add_subdirectory(common)
add_subdirectory(server)
add_subdirectory(steam)
add_subdirectory(utils)
add_subdirectory(os)
