#----------------------------------------------------------------------------------------------------------------------
# Subdirectories
#----------------------------------------------------------------------------------------------------------------------

add_subdirectory(common)
add_subdirectory(json)
add_subdirectory(os)
add_subdirectory(server)
add_subdirectory(steam)
add_subdirectory(utils)
